[gd_scene load_steps=3 format=3 uid="uid://dhqyoeojs2xo3"]

[ext_resource type="Script" path="res://hud.gd" id="1_ny4e7"]
[ext_resource type="Script" path="res://drawer.gd" id="2_ridpc"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_ny4e7")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(133, 468)

[node name="Console" type="PopupPanel" parent="."]
title = "Open Wheel Debug Console"
initial_position = 1
size = Vector2i(512, 256)
unresizable = false
borderless = false
always_on_top = true
content_scale_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Console"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = 508.0
offset_bottom = 252.0
grow_horizontal = 2
grow_vertical = 2

[node name="CommandHistory" type="RichTextLabel" parent="Console/VBoxContainer"]
clip_contents = false
layout_mode = 2
size_flags_vertical = 3
autowrap_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Console/VBoxContainer"]
layout_mode = 2

[node name="Command" type="LineEdit" parent="Console/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
placeholder_text = "Enter commands here"

[node name="Submit" type="Button" parent="Console/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Submit"

[node name="Label" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -91.0
offset_top = -52.0
offset_right = 5.0
offset_bottom = -29.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2, 2)
text = "Engine RPM:"

[node name="PopupPanel" type="PopupPanel" parent="."]
title = "Car Telemetry"
position = Vector2i(205, 140)
size = Vector2i(270, 270)
unresizable = false
borderless = false

[node name="TabContainer" type="TabContainer" parent="PopupPanel"]
offset_left = 4.0
offset_top = 4.0
offset_right = 266.0
offset_bottom = 266.0
current_tab = 0

[node name="FrictionCircle" type="GridContainer" parent="PopupPanel/TabContainer"]
layout_mode = 2
columns = 2
metadata/_tab_index = 0

[node name="LabelFL" type="Label" parent="PopupPanel/TabContainer/FrictionCircle"]
layout_mode = 2
text = "FL"
horizontal_alignment = 1

[node name="LabelFR" type="Label" parent="PopupPanel/TabContainer/FrictionCircle"]
layout_mode = 2
text = "FR"
horizontal_alignment = 1

[node name="FL" type="ColorRect" parent="PopupPanel/TabContainer/FrictionCircle"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 0)

[node name="FR" type="ColorRect" parent="PopupPanel/TabContainer/FrictionCircle"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 0)

[node name="LabelRL" type="Label" parent="PopupPanel/TabContainer/FrictionCircle"]
layout_mode = 2
text = "RL"
horizontal_alignment = 1

[node name="LabelRR" type="Label" parent="PopupPanel/TabContainer/FrictionCircle"]
layout_mode = 2
text = "RR"
horizontal_alignment = 1

[node name="RL" type="ColorRect" parent="PopupPanel/TabContainer/FrictionCircle"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 0)

[node name="RR" type="ColorRect" parent="PopupPanel/TabContainer/FrictionCircle"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 0)

[node name="ColorRect" type="ColorRect" parent="PopupPanel/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="ColorRect2" type="ColorRect" parent="PopupPanel/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="ColorRect3" type="ColorRect" parent="PopupPanel/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="Drawer" type="Control" parent="." node_paths=PackedStringArray("fl_friction_circle", "fr_friction_circle", "rl_friction_circle", "rr_friction_circle")]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_ridpc")
fl_friction_circle = NodePath("../PopupPanel/TabContainer/FrictionCircle/FL")
fr_friction_circle = NodePath("../PopupPanel/TabContainer/FrictionCircle/FR")
rl_friction_circle = NodePath("../PopupPanel/TabContainer/FrictionCircle/RL")
rr_friction_circle = NodePath("../PopupPanel/TabContainer/FrictionCircle/RR")

[node name="Marker2D" type="Marker2D" parent="Drawer"]
position = Vector2(70, 74)

[connection signal="text_submitted" from="Console/VBoxContainer/HBoxContainer/Command" to="." method="_on_command_text_submitted"]
[connection signal="pressed" from="Console/VBoxContainer/HBoxContainer/Submit" to="." method="_on_submit_pressed"]
